[tool.poetry]
name = "folium-pmtiles"
version = "0.1.0"
description = "Folium Plugin to Support PMTiles"
authors = ["Jt Miclat <jtmiclat@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "folium_pmtiles"}]

[tool.poetry.dependencies]
python = "^3.8"
folium = "^0.14.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
pre-commit = "^3.0.4"
isort = "^5.12.0"
nbqa = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
