[tool.poetry]
name = "folium-pmtiles"
version = "0.2.1"
description = "Folium Plugin to Support PMTiles"
authors = ["Jt Miclat <jtmiclat@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jtmiclat/folium-pmtiles"
packages = [{include = "folium_pmtiles"}]
classifiers = [
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.8"
folium = "^0.14.0"


[tool.poetry.group.dev.dependencies]
flake8 = {version= "^6.0.0", python=">=3.8.1"} 
black = "^23.1.0"
pre-commit = "^3.0.4"
isort = "^5.12.0"
nbqa = "^1.6.1"


[tool.poetry.group.notebook.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
