[tool.poetry]
name = "folium-pmtiles"
version = "0.4.2"
description = "Folium Plugin to Support PMTiles"
authors = ["Jt Miclat <jtmiclat@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jtmiclat/folium-pmtiles"
packages = [{ include = "folium_pmtiles" }]
classifiers = [
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.8"
folium = ">=0.14.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
urllib3 = "<2.0.0"
ruff = "^0.1.6"


[tool.poetry.group.notebook.dependencies]
jupyter = "^1.0.0"

[tool.ruff]
ignore = ["E501"]
extend-include = ["*.ipynb"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
